--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -29,6 +29,8 @@
 @import 'components/card';
 @import 'components/section-warranty';
 @import 'components/list-warranty';
+@import 'components/section-slider';
+@import 'components/slider';
 // @import 'components/block-title';
 // @import 'components/section-services';
 // @import 'components/services-list';
