--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -26,15 +26,12 @@
 @import 'components/list-program';
 @import 'components/section-choosing';
 @import 'components/section-teacher';
-@import 'components/card';
+@import 'components/card-teacher';
 @import 'components/section-warranty';
 @import 'components/list-warranty';
 @import 'components/section-slider';
 @import 'components/slider';
-// @import 'components/block-title';
-// @import 'components/section-services';
-// @import 'components/services-list';
-// @import 'components/section-team';
-// @import 'components/team-list';
+@import 'components/graduate-card';
+@import 'components/cards-slides';
 // @import 'components/footer-content';
 // @import 'components/field';
