--- a/project-01/src/sass/components/cards-slides.scss
+++ b/project-01/src/sass/components/cards-slides.scss
@@ -9,12 +9,17 @@
   @extend %list;
 }
 
-// .cards-slides__item {}
-
 .cards-slides__link {
   display: block;
   @extend %link;
   font-size: 0px;
+}
+
+.cards-slides__image:hover,
+.cards-slides__image:hover {
+  border: 2px solid #ff6b08;
+  border-radius: 50%;
+  transform: scale(1.12);
 }
 
 .slider__item--fifth-card,
@@ -23,5 +28,3 @@
 .slider__item--eighth-card {
   display: none;
 }
-
-// .cards-slides__image {}
