--- a/project-01/src/sass/components/section-slider.scss
+++ b/project-01/src/sass/components/section-slider.scss
@@ -6,6 +6,7 @@
   text-align: center;
   margin-bottom: 54px;
   padding: 46px 20px 0px;
+  position: relative;
 }
 
 .section-slider__title {
@@ -16,29 +17,32 @@
 }
 
 .section-slider__button {
-  display: block;
+  @extend %button;
   border: none;
   width: 20px;
   height: 11px;
-  color: #ff6b08;
-}
-
-.section-slider__button {
-  display: block;
-  width: 20px;
-  height: 12px;
-  @extend %button;
-  border: none;
-  background-color: #ffffff;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  fill: #ff6b08;
+  background: #ffffff;
 
   &--left-arrow {
-    background-image: url(../../images/arrow-left.png);
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
   }
 
   &--right-arrow {
-    background-image: url(../../images/arrow-right.png);
+    position: absolute;
+    bottom: 20px;
   }
+
+  &:hover,
+  &:focus {
+    fill: #ffffff;
+    background-color: #ff6b08;
+  }
+}
+
+.section-slider__icon {
+  width: 100%;
+  height: 100%;
 }
