--- a/project-01/src/sass/components/slider.scss
+++ b/project-01/src/sass/components/slider.scss
@@ -37,18 +37,22 @@
   margin-bottom: 22px;
 }
 
-// .slider__img {
-//   display: block;
-//   width: 82px;
-//   height: 82px;
-// }
+.slider__img:hover,
+.slider__img:focus {
+  border: 2px solid #ff6b08;
+  border-radius: 50%;
+  transform: scale(1.12);
+}
 
 .slider__icon {
   display: block;
   width: 25px;
   height: 14px;
-  //   width: 50px;
-  //   height: 28px;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.15);
+  }
 }
 
 // .slider__graduate-card {}
