--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -33,5 +33,8 @@
 @import 'components/slider';
 @import 'components/graduate-card';
 @import 'components/cards-slides';
-// @import 'components/footer-content';
-// @import 'components/field';
+@import 'components/section-form';
+@import 'components/input-field';
+@import 'components/footer';
+@import 'components/footer-form';
+@import 'components/copyright';
