--- a/project-01/src/sass/components/footer.scss
+++ b/project-01/src/sass/components/footer.scss
@@ -39,29 +39,22 @@
   height: 20px;
   fill: #ff6b08;
 
+  &:hover,
+  &:focus {
+    fill: #ffffff;
+    background-color: #ff6b08;
+  }
+
 }
 
 .footer__link {
   display: block;
-  // width: 37px;
-  // height: 37px;
-  width: 200px;
-  height: 200px;
+  font-size: 0px;
   margin-bottom: 20px;
 }
 
 .footer__icon {
-  width: 100px;
-  height: 100px;
+  // width: 400px;
+  // height: 400px;
   fill: rgb(236, 236, 46);
 }
-
-
-// .footer__copyright {}
-
-
-//   &:hover,
-//   &:focus {
-//     color: $primary-red-color;
-//   }
-// }
