--- a/project-01/src/sass/components/footer.scss
+++ b/project-01/src/sass/components/footer.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  // margin-bottom: 28px;
+  padding: 34px 0px 0px;
 }
 
 .footer__menu {
@@ -17,19 +17,21 @@
 }
 
 .footer__item {
+  display: flex;
+  justify-content: center;
   @extend %link;
- 
-  &--logo{
+
+  &--logo {
     order: 2;
   }
 }
 
-.footer__logo{
+.footer__logo {
   margin-bottom: 14px;
 }
 
 .footer__form {
-  padding: 34px 0px 0px;
+  padding: 0px;
   margin-bottom: 22px;
 }
 
@@ -44,17 +46,25 @@
     fill: #ffffff;
     background-color: #ff6b08;
   }
-
 }
 
 .footer__link {
   display: block;
-  font-size: 0px;
-  margin-bottom: 20px;
+  @extend %list;
 }
 
-.footer__icon {
-  // width: 400px;
-  // height: 400px;
-  fill: rgb(236, 236, 46);
+.footer__icon{
+  display: block;
+  width: 37px;
+  height: 37px;
+  background-image: url(../../images/icons-svg/instagram.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 0px;
+  margin-bottom: 20px;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.15);
+  }
 }
