--- a/project-01/src/sass/main.scss
+++ b/project-01/src/sass/main.scss
@@ -14,7 +14,7 @@
 @import 'components/header';
 @import 'components/navigation';
 @import 'components/logo';
-@import 'components/menu';
+@import 'components/menu-navigation';
 @import 'components/section-training';
 @import 'components/section-icons';
 @import 'components/section-program';
