--- a/project-01/src/sass/components/burger.scss
+++ b/project-01/src/sass/components/burger.scss
@@ -1,54 +1,51 @@
 .burger {
-  display: flex;
-  text-align: left;
-  align-items: center;
+  display: block;
   width: 24px;
   height: 12px;
+  position: relative;
+
+  &::before,
+  &::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    transition: all 0.1s linear;
+  }
+
+  &::before {
+    top: 0;
+  }
+
+  &::after {
+    bottom: 0;
+  }
+
+  &:hover::before {
+    transform: rotate(45deg);
+    top: 5px;
+  }
+
+  &:hover::after {
+    transform: rotate(-45deg);
+    bottom: 5px;
+  }
 
   &:hover .burger__block {
-    transform-origin: 50% 50%;
-    width: 0px;
-  }
-
-  &:hover .burger__block::before {
-    transform-origin: 3px 3px;
-    transform: rotate(43deg);
-    width: 25px;
-  }
-
-  &:hover .burger__block::after {
-    transform-origin: 3px 0px;
-    transform: rotate(-43deg);
-    width: 25px;
+    transform: scale(0);
   }
 }
 
 .burger__block {
-  position: relative;
-  width: 24px;
+  position: absolute;
+  width: 100%;
   height: 2px;
-  background-color: $primary-dark-color;
-  transition: all 0.08s linear;
-
-  &::before {
-    display: inline-block;
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color: $primary-dark-color;
-    position: absolute;
-    top: -7px;
-    transition: all 0.08s linear;
-  }
-
-  &::after {
-    display: inline-block;
-    content: '';
-    width: 100%;
-    height: 2px;
-    background-color: $primary-dark-color;
-    position: absolute;
-    bottom: -7px;
-    transition: all 0.08s linear;
-  }
+  background-color: #000000;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all 0.1s linear;
 }
