--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -3,7 +3,7 @@
   font-size: 11px;
   line-height: $main-text-height;
   @extend %button;
-  padding: 15px 14px;
+  padding: 16px 14px;
 
   &--light {
     color: $primary-white-color;
@@ -13,6 +13,19 @@
     &:focus {
       color: $primary-orange-color;
       background-color: $primary-white-color;
+    }
+  }
+
+  &--lighter {
+    color: #d35526;
+    background-color: $primary-white-color;
+    border: 2px solid #d35526;
+    
+    &:hover,
+    &:focus {
+      color: $primary-white-color;
+      background-color: #d35526;
+      border: 2px solid #ffffff;
     }
   }
 }
