--- a/project-01/src/sass/components/container.scss
+++ b/project-01/src/sass/components/container.scss
@@ -1,6 +1,79 @@
 .container {
+  // min-width: 320px;
+  // max-width: 320px;
   width: 320px;
   margin: 0px auto;
-  // text-align: center;
-  // padding: 0px 20px;
+  background-color: rgb(255, 255, 0);
 }
+
+// @media screen and (max-width: 767px) {
+// }
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+    margin: 0px auto;
+    background-color: rgb(27, 223, 16);
+  }
+}
+
+// @media screen and (min-width: 768px) and (max-width: 1279px) {
+//   .container {
+//     width: 768px;
+//     margin: 0px auto;
+//     background-color: rgb(0, 191, 255);
+//   }
+
+// .section-item:not(:nth-last-of-type(-2n+3)) {
+//   margin-bottom: 34px;
+// }
+
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+    margin: 0px auto;
+    background-color: rgb(0, 200, 255);
+  }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 1679px) {
+  .container {
+    width: 1280px;
+    margin: 0px auto;
+    background-color: rgb(174, 0, 255);
+  }
+
+  // .section-item:not(:nth-last-of-type(-2n+3)) {
+  //   margin-bottom: 34px;
+}
+
+@media screen and (min-width: 1680px) {
+  .container {
+    margin: 0px auto;
+    width: 1680px;
+    background-color: rgb(255, 0, 230);
+  }
+}
+
+
+// @media #{$format} {
+//   .container {
+//     @media (min-width: 767px) {
+//       // width: 100%;
+//       width: 320px;
+//       margin: 0px auto;
+//     }
+
+//     @media (max-width: $tablet) {
+//       width: 768px;
+//     }
+
+//     @media (max-width: $desktop) {
+//       width: 1280px;
+//     }
+
+//     @media (max-width: $desktop) {
+//       width: 1680px;
+//     }
+//   }
+// }
