--- a/project-01/src/sass/components/header.scss
+++ b/project-01/src/sass/components/header.scss
@@ -34,3 +34,25 @@
 //   @include font-settings(150px, 1);
 //   margin: 0px 0px 98px;
 // }
+
+@media screen and (min-width: 768px) {
+  .header__wrapper {
+    // height: 640px;
+    // min-height: 945px;
+    background-image: url('../../images/bgr-tablet.png');
+    background-repeat: no-repeat;
+    // background-position: 0px 10px;
+    background-size: contain;
+    margin-bottom: 54px;
+    padding: 0px 40px;
+  }
+
+  .header__navigation {
+    margin-bottom: 62px;
+    padding: 34px 0px 0px;
+  }
+  
+  .header__section-training {
+    margin-bottom: 116px;
+  }
+}
