--- a/project-01/src/sass/components/logo.scss
+++ b/project-01/src/sass/components/logo.scss
@@ -1,10 +1,19 @@
 .logo {
   display: inline-block;
-  font-size: 0px;
+  display: block;
+  width: 78px;
+  // font-size: 0px;
   @extend %link;
 
   &:hover,
   &:focus {
     box-shadow: 2px 2px 10px 2px #ff6b08;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    width: 128px;
+    margin-right: 240px;
   }
 }
