--- a/project-01/src/sass/components/section-icons.scss
+++ b/project-01/src/sass/components/section-icons.scss
@@ -1,3 +1,11 @@
 // .section-icons__wrapper {
 //   margin: 0px 0px 50px 0px;
 // }
+
+// @media screen and (min-width: 768px) {
+//   .section-icons__wrapper {
+//       display: flex;
+
+//     //   margin: 0px 0px 50px 0px;
+//     }
+//   }
