--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -1,5 +1,4 @@
 .section-problem {
-  display: flex;
   min-height: 676px;
 }
 
@@ -7,7 +6,7 @@
   display: flex;
   flex-direction: column;
   height: 520px;
-  background: #111517;
+  background-color: #111517;
   padding: 46px 20px 0px;
 }
 
@@ -18,8 +17,39 @@
   text-align: left;
   margin: 0px 0px 16px 0px;
   padding: 0px 40px 0px 0px;
+  white-space: pre-line;
 
   &--colortext {
     color: #ff6b08;
+    padding-right: 8px;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .section-problem {
+    // min-height: 488px;
+    min-height: 552px;
+    background-color: #fff;
+  }
+
+  .section-problem__wrapper {
+    width: 100%;
+    height: 334px;
+    padding: 60px 40px 0px 40px;
+    background-image: url(../../images/bgr-fire.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 0;
+  }
+
+  .section-problem__title {
+    font-size: 26px;
+    line-height: 1.269;
+    // white-space: pre-line;
+    // white-space: pre;
+    // white-space: normal;
+    // word-wrap: break-word;
+    // white-space: pre-wrap;
+  }
+}
+
