--- a/project-01/src/sass/components/section-training.scss
+++ b/project-01/src/sass/components/section-training.scss
@@ -37,7 +37,32 @@
   margin: 0px auto 34px;
 }
 
-.section-training__img{
+.section-training__img {
   max-width: 216px;
   margin: 0px auto;
+}
+
+@media screen and (min-width: 768px) {
+  .section-training__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .section-training__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    max-width: 280px;
+  }
+
+  .section-training__button {
+    margin: 0px;
+  }
+
+  .section-training__img{
+    max-width: 370px;
+    margin: 0px;
+  }
 }
