--- a/project-01/src/sass/components/section-training.scss
+++ b/project-01/src/sass/components/section-training.scss
@@ -57,6 +57,11 @@
     max-width: 280px;
   }
 
+  .section-training__title {
+    font-size: 26px;
+    line-height: 1.269;
+  }
+
   .section-training__button {
     margin: 0px;
   }
@@ -66,3 +71,4 @@
     margin: 0px;
   }
 }
+
