--- a/project-01/src/sass/components/section-program.scss
+++ b/project-01/src/sass/components/section-program.scss
@@ -1,12 +1,13 @@
 .section-program {
   display: flex;
   position: relative;
+  background-color: #111517;
 }
 
 .section-program__wrapper {
   display: flex;
   flex-direction: column;
-  background: #111517;
+  // background: #111517;
 }
 
 .section-program__title {
@@ -28,4 +29,39 @@
   position: absolute;
   right: 0px;
   bottom: -90px;
+}
+
+@media screen and (min-width: 768px) {
+  .section-program__wrapper {
+    padding: 0px 40px;
+    margin-bottom: 150px;
+  }
+
+  .section-program__title {
+    font-size: 26px;
+    line-height: 2.405;
+    padding-top: 64px;
+    margin-bottom: 44px;
+    text-align: left;
+  }
+
+  .section-program__list {
+    margin-bottom: 0px;
+  }
+
+  .section-program__img {
+    width: 404px;
+    height: 282px;
+    background-image: url(../../images/pic-tabl.png);
+    right: 0px;
+    bottom: 52px;
+  }
+
+  // .menu-actions__item:not(:nth-last-of-type(-3n+1)) {
+  //   margin-bottom: 16px;
+  // }
+
+  // .menu-actions__item:nth-last-of-type(-n+2) {
+  //   margin-bottom: 40px;
+  // }
 }
