--- a/project-01/src/sass/components/section-slider.scss
+++ b/project-01/src/sass/components/section-slider.scss
@@ -46,3 +46,17 @@
   width: 100%;
   height: 100%;
 }
+
+@media screen and (min-width: 768px) {
+  .section-slider__wrapper {
+    margin-bottom: 75px;
+    padding: 0px 40px;
+  }
+
+  .section-slider__title {
+    font-size: 26px;
+    line-height: 2.405;
+    margin: 0px 0px 28px 0px;
+  }
+}
+
