--- a/project-01/src/sass/components/slider.scss
+++ b/project-01/src/sass/components/slider.scss
@@ -52,3 +52,29 @@
 // .slider__graduate-card {}
 
 // .slider__image {}
+
+@media screen and (min-width: 768px) {
+  .slider {
+    width: 100%;
+    //   height: 393px;
+  }
+
+  // .slider__item {
+  // }
+  
+  .slider__item--first-card {
+    display: flex;
+    padding: 0px 36px;
+    // padding-bottom: 32px;
+    margin-bottom: 24px;
+  }
+
+  .slider__link-wrapper {
+    padding: 20px 0px 0px;
+    // margin-bottom: 16px;
+  }
+
+  .slider__link--img {
+      margin-bottom: 22px;
+    }
+}
