--- a/project-01/src/sass/components/input-field.scss
+++ b/project-01/src/sass/components/input-field.scss
@@ -27,3 +27,9 @@
   outline: 2px solid #ff0000;
   outline-offset: -2px;
 }
+
+@media screen and (min-width: 768px) {
+  .input-field {
+    width: 400px;
+  }
+}
