--- a/project-01/src/sass/components/section-teacher.scss
+++ b/project-01/src/sass/components/section-teacher.scss
@@ -1,6 +1,6 @@
-.section-teacher {
-  display: flex;
-}
+// .section-teacher {
+// display: flex;
+// }
 
 .section-teacher__wrapper {
   display: flex;
