--- a/project-01/src/sass/components/footer.scss
+++ b/project-01/src/sass/components/footer.scss
@@ -27,6 +27,9 @@
 }
 
 .footer__logo {
+  width: 78px;
+  height: 30px;
+  font-size: 0px;
   margin-bottom: 14px;
 }
 
@@ -53,7 +56,7 @@
   @extend %list;
 }
 
-.footer__icon{
+.footer__icon {
   display: block;
   width: 37px;
   height: 37px;
@@ -66,5 +69,37 @@
   &:hover,
   &:focus {
     transform: scale(1.15);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__wrapper {
+    padding: 36px 40px 0px;
+  }
+
+  .footer__menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+
+  .footer__logo {
+    width: 128px;
+    height: 47px;
+    margin: 0px 82px 0px 0px;
+  }
+
+  .footer__item--logo {
+    order: 0;
+  }
+
+  .footer__form {
+    margin: 0px 60px 0px 0px;
+  }
+
+  .footer__icon {
+    margin-bottom: 0px;
   }
 }
