--- a/project-01/src/sass/components/graduate-card.scss
+++ b/project-01/src/sass/components/graduate-card.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.graduate-card__text--wide{
+  display: none;
+}
+
 .graduate-card__link:hover,
 .graduate-card__link:focus {
   text-shadow: 0px 0px 8px #ff6b08;
@@ -34,20 +38,26 @@
 
 @media screen and (min-width: 768px) {
   .graduate-card {
+    width: 472px;
     padding: 0px;
     text-align: left;
+    margin-bottom: 50px;
   }
 
   .graduate-card__title {
     font-size: 18px;
     line-height: 1.62;
-    margin: 0px;
+    margin: 0px 0px 12px;
   }
 
   .graduate-card__description {
     font-size: 12.5px;
     line-height: 1.333;
-    margin: 0px 0px 18px;
+    margin: 0px 0px 14px;
+  }
+
+  .graduate-card__text--wide{
+    display: contents;
   }
 }
 
