--- a/project-01/src/sass/components/navigation.scss
+++ b/project-01/src/sass/components/navigation.scss
@@ -4,9 +4,8 @@
   align-items: center;
 }
 
-
-// .navigation--list {
-//   // text-transform: uppercase;
-//   // @extend %list;
-// }
-@media screen and (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+  .navigation__logo {
+    margin-right: 240px;
+  }
+}
