--- a/project-01/src/sass/components/slider.scss
+++ b/project-01/src/sass/components/slider.scss
@@ -36,7 +36,6 @@
   }
 }
 
-
 .slider__img:hover,
 .slider__img:focus {
   border: 2px solid #ff6b08;
@@ -56,25 +55,22 @@
 @media screen and (min-width: 768px) {
   .slider {
     width: 100%;
-    //   height: 393px;
   }
 
-  // .slider__item {
-  // }
-  
   .slider__item--first-card {
     display: flex;
-    padding: 0px 36px;
+    justify-content: space-between;
+    padding: 44px 36px 0px;
     // padding-bottom: 32px;
     margin-bottom: 24px;
   }
 
   .slider__link-wrapper {
     padding: 20px 0px 0px;
-    // margin-bottom: 16px;
+    margin-bottom: 0px;
   }
 
   .slider__link--img {
-      margin-bottom: 22px;
-    }
+    margin-bottom: 22px;
+  }
 }
